manual event triggers overflow fix

--- a/console/src/components/Common/TableCommon/ReactTableOverrides.css
+++ b/console/src/components/Common/TableCommon/ReactTableOverrides.css
@@ -68,7 +68,10 @@
   border-right: 1px solid rgba(0,0,0,0.1);
   word-wrap: break-word;
 }
-
+.ReactTable .rt-th, .ReactTable .rt-td
+{
+  overflow: unset !important;
+}
 .ReactTable .rt-th .ellipsis,
 .ReactTable .rt-td > div {
   overflow: hidden;
@@ -85,17 +88,17 @@
 
 .ReactTable .rt-table .rt-thead .rt-tr .rt-th:first-child {
   flex: 24 0 auto !important;
-  min-width: 150px;
+  min-width: 170px;
 }
 
 .ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-odd .rt-td:first-child {
   flex: 24 0 auto !important;
-  min-width: 150px;
+  min-width: 170px;
 }
 
 .ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-even .rt-td:first-child {
   flex: 24 0 auto !important;
-  min-width: 150px;
+  min-width: 170px;
 }
 
 .ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-odd:hover {
